some spec revise

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,6 +5,7 @@
   <div class="card">
     <div class="card-header">
       <%= task.title %>
+      <%= task.created_at %>
     </div>
     <div class="card-body">
       <p class="card-text">
