--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,7 +12,7 @@
         <%= task.content %>
       </p>
       <%= link_to "#{t :edit_task}", edit_task_path(task), class: 'btn btn-outline-primary' %>
-      <%= link_to "#{t :delete_task}", task_path(task), method: 'delete', data: { confirm: '確認刪除？'}, class: 'btn btn-primary' %>
+      <%= link_to "#{t :delete_task}", task_path(task), method: 'delete', data: { confirm: "#{I18n.t :delete_sure}"}, class: 'btn btn-primary' %>
     </div>
   </div>
 <% end %>
