--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,10 +1,9 @@
 <%= simple_form_for(task) do |f| %>
   <%= f.input :title, label: "#{t :task_title}" %>
   <%= f.input :content, label: "#{t :task_content}" %>
-  <a><%= "#{t :end_time}"%></a>
+  <%= f.input :end_time, label: "#{t :end_time}" %>
   <%# f.text_field :end_time, data: {provide:'datepicker', dateFormat: 'yy-mm-dd'} %>
-  <%= f.text_field :end_time, class: 'flatPicker' %>
-  <br/>
+  <%# f.text_field :end_time, class: 'flatPicker' %>
   <%= f.button :submit, "#{t :sure}", class: 'btn btn-outline-primary' %>
   <%= link_to "#{t :back_to_task_list}", tasks_path, class: 'btn btn-primary' %>
 <% end %>
