--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,1 @@
-@import "bootstrap";
-// @import "bootstrap-datepicker";
-// @import "bootstrap-datetimepicker";
+@import "bootstrap/scss/bootstrap";
