--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -1,16 +1,18 @@
+<%# binding.pry %>
 <% tasks.each do |task| %>
   <div class="card">
     <div class="card-header">
       <a><%= task.title %></a>
-      <a><%= t :create_time %>：<%= task.created_at.to_s.slice(0..15) %></a>
-      <a><%= t :end_time %>：<%= task.end_time.to_s.slice(0..15) %></a>
+      <a><%= t :create_time %>：<%= task.created_at.strftime('%Y-%m-%d %H:%M:%S %z')%></a>
+      <a><%= t :end_time %>：<%= task.end_time.strftime('%Y-%m-%d %H:%M:%S %z') %></a>
+      <a><%= t :task_state %>：<%= task.aasm.human_state %></a>
     </div>
     <div class="card-body">
       <p class="card-text">
         <%= task.content %>
       </p>
       <%= link_to "#{t :edit_task}", edit_task_path(task), class: 'btn btn-outline-primary' %>
-      <%= link_to "#{t :delete_task}", task_path(task), method: 'delete', data: { confirm: '確認刪除？'}, class: 'btn btn-primary' %>
+      <%= link_to "#{t :delete_task}", task_path(task), method: 'delete', data: { confirm: "#{t :task_delete_sure}" }, class: 'btn btn-primary' %>
     </div>
   </div>
 <% end %>
