--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -29,4 +29,17 @@
 </div>
 <% end %>
 
+<% if true %>
+  <%= form_tag tasks_path, method: :get, class: 'questions-search-form' do %>
+    <div class="input-group">
+      <input type="text" class="form-control" name="query_string" placeholder="Search...">
+      <div class="input-group-append">
+        <button class="btn btn-secondary" type="submit">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
+    </div>
+  <% end %>
+<% end %>
+
 <%= render 'tasks', tasks: @tasks %>
