--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -5,7 +5,8 @@
       <a><%= task.title %></a>
       <a><%= t :create_time %>：<%= task.created_at.strftime('%Y-%m-%d %H:%M:%S %z')%></a>
       <a><%= t :end_time %>：<%= task.end_time.strftime('%Y-%m-%d %H:%M:%S %z') %></a>
-      <a><%= t :task_state %>：<%= task.aasm.human_state %></a>
+      <a><%= t :task_state %>：<%= t :"#{task.state}" %></a>
+      <a><%= t :task_priority %>：<%= t :"#{task.priority}" %></a>
     </div>
     <div class="card-body">
       <p class="card-text">
