--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -6,9 +6,9 @@
       <a><%= t :create_time %>：<%= task.created_at.strftime('%Y-%m-%d %H:%M:%S %z')%></a>
       <a><%= t :end_time %>：<%= task.end_time.strftime('%Y-%m-%d %H:%M:%S %z') %></a>
       <% if false %>
-      如果寫成 <%= t task.priority %> 或 <%= t :"#{task.priority}" %>，
-      rspec 都會跳 ActionView::Template::Error:I18n::ArgumentError，
-      但用I18n內建的human_state，又無法抓到aasm設定的multi state machine，
+      如果寫成 <%= t task.priority %> 或 <%= t :"#{task.priority}" %> ，
+      rspec 都會跳 ActionView::Template::Error:I18n::ArgumentError ，
+      但I18n內建的 <%= t task.aasm.human_state %> ，multi state machine又無法使用，
       沒辦法完全I18n，小遺憾。
       <% end %>
       <a><%= t :task_state  %>：<%= task.state %></a>
