--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -5,9 +5,8 @@
       <a><%= task.title %></a>
       <a><%= t :create_time %>：<%= task.created_at.strftime('%Y-%m-%d %H:%M:%S %z')%></a>
       <a><%= t :end_time %>：<%= task.end_time.strftime('%Y-%m-%d %H:%M:%S %z') %></a>
-      <%# 用javascript的字串相+寫法rspec竟然就過了... %>
-      <a><%= t :task_state %>：<%= t ":"+"#{task.state}" %></a>
-      <a><%= t :task_priority %>：<%= t ":"+"#{task.priority}" %></a>
+      <a><%= t :task_state %>：<%= task.state %></a>
+      <a><%= t :task_priority %>：<%= task.priority %></a>
     </div>
     <div class="card-body">
       <p class="card-text">
