--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -4,6 +4,6 @@
   <%= f.input :priority, as: :radio_buttons, collection: [['high',"#{t :high}"], ['medium',"#{t :medium}"], ['low',"#{t :low}"]], label_method: :second, value_method: :first, wrapper: :vertical_collection_inline %>
   <%= f.input :state, as: :radio_buttons, collection: [['pending',"#{t :pending}"], ['processing',"#{t :processing}"], ['finishing',"#{t :finishing}"]], label_method: :second, value_method: :first, wrapper: :vertical_collection_inline %>
   <%= f.input :end_time, label: "#{t :end_time}" %>
-  <%= f.button :submit, "#{t :sure}", class: 'btn btn-outline-primary' %>
-  <%= link_to "#{t :back_to_task_list}", tasks_path, class: 'btn btn-primary' %>
+  <%= f.button :submit, "#{t :sure}", class: 'btn btn-outline-secondary' %>
+  <%= link_to "#{t :back}", tasks_path, class: 'btn btn-secondary' %>
 <% end %>
