--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="<%= root_path %>">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="<%= root_path %>"><%= t :task_home %><span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="/admin"><%= t :user_admin %></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
