--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -12,8 +12,8 @@
       <p class="card-text">
         <%= task.content %>
       </p>
-      <%= link_to "#{t :edit_task}", edit_task_path(task), class: 'btn btn-outline-primary' %>
-      <%= link_to "#{t :delete_task}", task_path(task), method: 'delete', data: { confirm: "#{t :task_delete_sure}" }, class: 'btn btn-primary' %>
+      <%= link_to "#{t :edit_task}", edit_task_path(task), class: 'btn btn-outline-secondary' %>
+      <%= link_to "#{t :delete_task}", task_path(task), method: 'delete', data: { confirm: "#{t :task_delete_sure}" }, class: 'btn btn-secondary' %>
     </div>
   </div>
 <% end %>
