--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,36 +1,42 @@
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="<%= root_path %>"><%= t :task_home %><span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin"><%= t :user_admin %></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <% if logged_in? %>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Account
+<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="<%= root_path %>"><%= t :task_home %><span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin"><%= t :user_admin %></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"><%= t :about %></a>
+      </li>
+      <% if logged_in? %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= t :account %>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/admin"><%= t :admin %></a>
+            <a class="dropdown-item" href="#"><%= t :profile %></a>
+            <a class="dropdown-item" href="#"><%= t :setting %></a>
+            <a class="dropdown-item" rel="nofollow" data-method="delete" href="/logout">
+              <%= t :logout %>
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Profile</a>
-              <a class="dropdown-item" href="#">Settings</a>
-              <a class="dropdown-item" rel="nofollow" data-method="delete" href="/logout">Log out</a>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <a class="nav-link" href="<%= login_path %>">Log in</a>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </nav>
-</div>
+          </div>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= login_path %>"><%= t :login %></a>
+        </li>
+      <% end %>
+    </ul>
+    <% if logged_in? %>
+      <span class="navbar-text">
+        <%= t :hello %><%= session[:user_name] %>
+      </span>
+    <% end %>
+  </div>
+</nav>
