--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for(task) do |f| %>
   <%= f.input :title, label: "#{t :task_title}" %>
   <%= f.input :content, label: "#{t :task_content}" %>
-  <%= f.input :priority, as: :radio_buttons, collection: [['high',"#{t :high}"], ['medium',"#{t :medium}"], ['low',"#{t :low}"]], label_method: :second, value_method: :first, wrapper: :vertical_collection_inline %>
-  <%= f.input :state, as: :radio_buttons, collection: [['pending',"#{t :pending}"], ['processing',"#{t :processing}"], ['finishing',"#{t :finishing}"]], label_method: :second, value_method: :first, wrapper: :vertical_collection_inline %>
+  <%= f.input :priority, as: :radio_buttons, collection: [["#{t :high}","#{t :high}"], ["#{t :medium}","#{t :medium}"], ["#{t :low}","#{t :low}"]], label_method: :second, value_method: :first, wrapper: :vertical_collection_inline %>
+  <%= f.input :state, as: :radio_buttons, collection: [["#{t :pending}","#{t :pending}"], ["#{t :processing}","#{t :processing}"], ["#{t :finishing}","#{t :finishing}"]], label_method: :second, value_method: :first, wrapper: :vertical_collection_inline %>
   <%= f.input :end_time, label: "#{t :end_time}" %>
   <%= f.button :submit, "#{t :sure}", class: 'btn btn-outline-secondary' %>
   <%= link_to "#{t :back}", tasks_path, class: 'btn btn-secondary' %>
