--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :name, label: "#{t :user_name}" %>
   <%= f.input :email, label: "#{t :email}" %>
   <%= f.input :password, label: "#{t :password}"%>
+  <%= f.input :authority, label: "#{t :authority}", collection: [[0,"#{t :user_role}"], [1,"#{t :admin_role}"]], label_method: :second, value_method: :first %>
   <%= f.button :submit, "#{t :sure}", class: 'btn btn-outline-secondary' %>
   <%= link_to "#{t :back}", users_path, class: 'btn btn-secondary' %>
 <% end %>
