--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -5,7 +5,14 @@
   <%= f.input :priority, as: :radio_buttons, collection: [["#{t :high}","#{t :high}"], ["#{t :medium}","#{t :medium}"], ["#{t :low}","#{t :low}"]], label_method: :second, value_method: :first, wrapper: :vertical_collection_inline %>
   <%= f.input :state, as: :radio_buttons, collection: [["#{t :pending}","#{t :pending}"], ["#{t :processing}","#{t :processing}"], ["#{t :finishing}","#{t :finishing}"]], label_method: :second, value_method: :first, wrapper: :vertical_collection_inline %>
   <%= f.input :end_time, label: "#{t :end_time}" %>
-  <input type="text" data-role="tagsinput" value="" />
+  <%= f.input :task_tags, as: :select, collection: Tag.order(:name), label_method: :name, value_method: :name, input_html: {multiple: true} %>
   <%= f.button :submit, "#{t :sure}", class: 'btn btn-outline-secondary' %>
   <%= link_to "#{t :back}", tasks_path, class: 'btn btn-secondary' %>
 <% end %>
+<script>
+  $(document).on('ready turbolinks:load', function () {
+    $("#task_task_tags").select2({
+      tags: true
+    })
+  });
+</script>
