--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -20,3 +20,6 @@
         <%= link_to "#{t :edit_task}", edit_task_path(task), class: 'btn btn-outline-secondary btn-sm' %>
         <%= link_to "#{t :delete_task}", task_path(task), method: 'delete', data: { confirm: "#{t :task_delete_sure}" }, class: 'btn btn-secondary btn-sm' %>
       </div>
+    </div>
+  <% end %>
+</div>
