limit string of tags length

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -15,7 +15,9 @@
 <script>
   $(document).on('ready turbolinks:load', function () {
     $("#task_task_tags").select2({
-      tags: true
+      tags: true,
+      maximumInputLength: 10,
+      tokenSeparators: [",", " "]
     })
   });
 </script>
