--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
             <a class="dropdown-item" href="/admin"><%= t :admin %></a>
             <a class="dropdown-item" href="#"><%= t :profile %></a>
             <a class="dropdown-item" href="#"><%= t :setting %></a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" rel="nofollow" data-method="delete" href="/logout">
               <%= t :logout %>
             </a>
@@ -32,6 +33,15 @@
           <a class="nav-link" href="<%= login_path %>"><%= t :login %></a>
         </li>
       <% end %>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= t :language %>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href=""><%= link_to '中文', locale: 'zh-TW' %></a>
+          <a class="dropdown-item" href=""><%= link_to 'English', locale: 'en' %></a>
+        </div>
+      </li>
     </ul>
     <% if logged_in? %>
       <span class="navbar-text">
