add language switch dropdown select in header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,3 +50,10 @@
     <% end %>
   </div>
 </nav>
+<style>
+  a:link {
+    color: black;
+    text-align: center;
+    text-decoration: none;
+  }
+</style>
